--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Baskerville:wght@400&family=Raleway:wght@400&display=swap');
+
 body {
-    font-family: 'Roboto Serif', serif;
-    max-width: 800px;
+    font-size: 20px;
+    font-family: 'Baskerville', serif;
+    line-height: 1.5;
+    max-width: 960px;
     margin: 0 auto;
-    padding: 20px;
 }
 
 header {
-    background-color: dodgerblue;
-    padding: 20px;
-    text-align: center;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    background-color: lightblue;
+    padding: 24px;
 }
 
-h1 {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 48px;
-    color: whitesmoke;
+header h1 {
+    font-size: 64px;
+    font-family: 'Raleway', sans-serif;
 }
 
-h2 {
-    font-family: 'Josefin Sans', sans-serif;
+header p {
     font-size: 32px;
-    color: dodgerblue;
+    font-family: 'Raleway', sans-serif;
 }
 
-h2, p {
-    font-size: 20px;
+nav {
+    display: flex;
+    justify-content: space-between;
 }
 
-h2 + p {
+a {
+    color: midnightblue;
+    text-decoration: none;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 10px;
+}
+
+article h2, aside h3 {
     margin-top: 10px;
 }
 
-h2:first-child {
-    margin-top: 0;
+aside {
+    border: 1px solid lightblue;
 }
 
-h2 + p:first-child {
-    margin-top: 0;
+nav, article, aside, footer {
+    padding: 10px;
 }
 
 h2 {
-    font-style: italic;
+    font-size: 36px;
+    font-family: 'Raleway', sans-serif;
+}
+
+h3 {
+    font-size: 24px;
+    font-family: 'Raleway', sans-serif;
+}
+
+footer {
+    border-top: 1px solid lightblue;
+    margin-top: 10px;
+}
+
+@media (max-width: 500px) {
+    header {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    header img {
+        max-width: 150px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
+    header h1 {
+        font-size: 32px;
+    }
+
+    header p {
+        font-size: 24px;
+    }
+
+    main {
+        grid-template-columns: 1fr;
 }
